adjustment of social media

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <li><a class="facebook" href="http://www.facebook.com" target="_blank"></a></li>
             <li><a class="insta" href="http://www.instagram.com" target="_blank"></a></li>
             <li><a class="twitter" href="http://www.twitter.com" target="_blank"></a></li>
-            <li><a class="dribbble" href="http://www.dribbble.com" target="_blank"></a></li>
+            <li><a class="github" href="http://www.github.com" target="_blank"></a></li>
           </ul>
         </div>
       </div>
