--- a/index.html
+++ b/index.html
@@ -630,11 +630,11 @@
       <section class="container-services">
 
         <div class="services">
-          <h3 id="services">SERVICES</h3>
+          <h3 id="services">SERVIÇOS</h3>
         </div>
 
         <div>
-          <h2 class="sub-services">I provide a full range of modern digital services</h2>
+          <h2 class="sub-services">Disponilizo serviços digitais com alcance global</h2>
         </div>
 
         <div class="services-cards">
@@ -644,9 +644,8 @@
             <h4><svg xmlns="http://www.w3.org/2000/svg" height="80px" viewBox="-13 -13 50 50" width="80px" fill="#ffffff">
                 <path d="M0 0h24v24H0V0z" fill="#2893a4" />
                 <path d="M23 11.01L18 11c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1h5c.55 0 1-.45 1-1v-9c0-.55-.45-.99-1-.99zM23 20h-5v-7h5v7zM20 2H2C.89 2 0 2.89 0 4v12c0 1.1.89 2 2 2h7v2H7v2h8v-2h-2v-2h2v-2H2V4h18v5h2V4c0-1.11-.9-2-2-2zm-8.03 7L11 6l-.97 3H7l2.47 1.76-.94 2.91 2.47-1.8 2.47 1.8-.94-2.91L15 9h-3.03z" />
-              </svg>Web e mobile apps developer</h4>
-            <p>Brands online everywhere, everytimetime, enable to your client in every device. </p>
-
+              </svg>Desenvolvimento Web e aplicativos mobile</h4>
+            <p>Marca online em todos os lugares, a todo tempo, seus clientes em todos os dispositivos. </p>
           </div>
 
           <div class="services-cards-two">
@@ -654,15 +653,15 @@
                 <rect fill="#2893a4" height="24" width="24" />
                 <path d="M18.85,10.39l1.06-1.06c0.78-0.78,0.78-2.05,0-2.83L18.5,5.09c-0.78-0.78-2.05-0.78-2.83,0l-1.06,1.06L18.85,10.39z M14.61,11.81L7.41,19H6v-1.41l7.19-7.19L14.61,11.81z M13.19,7.56L4,16.76V21h4.24l9.19-9.19L13.19,7.56L13.19,7.56z M19,17.5 c0,2.19-2.54,3.5-5,3.5c-0.55,0-1-0.45-1-1s0.45-1,1-1c1.54,0,3-0.73,3-1.5c0-0.47-0.48-0.87-1.23-1.2l1.48-1.48 C18.32,15.45,19,16.29,19,17.5z M4.58,13.35C3.61,12.79,3,12.06,3,11c0-1.8,1.89-2.63,3.56-3.36C7.59,7.18,9,6.56,9,6 c0-0.41-0.78-1-2-1C5.74,5,5.2,5.61,5.17,5.64C4.82,6.05,4.19,6.1,3.77,5.76C3.36,5.42,3.28,4.81,3.62,4.38C3.73,4.24,4.76,3,7,3 c2.24,0,4,1.32,4,3c0,1.87-1.93,2.72-3.64,3.47C6.42,9.88,5,10.5,5,11c0,0.31,0.43,0.6,1.07,0.86L4.58,13.35z" />
               </svg>Ui/Ux Design</h4>
-            <p>From the initial design to the final development stage, everything dedicated to you.</p>
+            <p>Desde o design inicial até o estágio final do desnvolvimento, compleetamente tudo voltado para você, cliente.</p>
           </div>
 
           <div class="services-cards-three">
             <h4><svg xmlns="http://www.w3.org/2000/svg" height="80px" viewBox="-13 -13 50 50" width="80px" fill="#ffffff">
                 <path d="M0 0h24v24H0V0z" fill="#2893a4" opacity=".87" />
                 <path d="M21 8h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2zm0 4l-3 7H9V9l4.34-4.34L12.23 10H21v2zM1 9h4v12H1z" />
-              </svg>Social accounts management</h4>
-            <p>Profitable social media strategy created to grow up all kind of bussines hostage in the web.</p>
+              </svg>Gerenciamento de contas em mídias sociais</h4>
+            <p>Estratégia alavancada de crescimento em rede social, desenvolvido para aumentar negócios e oportunidade oriundadas da web.</p>
           </div>
 
           <div class="services-cards-four">
@@ -675,8 +674,8 @@
                 <path d="M20.4,5.6C20,5.07,19.6,4.53,19.2,4c-0.99,0.74-2.24,1.68-3.2,2.4c0.4,0.53,0.8,1.07,1.2,1.6 C18.16,7.28,19.41,6.35,20.4,5.6z" />
                 <path d="M4,9c-1.1,0-2,0.9-2,2v2c0,1.1,0.9,2,2,2h1v4h2v-4h1l5,3V6L8,9H4z M9.03,10.71L11,9.53v4.94l-1.97-1.18L8.55,13H8H4v-2h4 h0.55L9.03,10.71z" />
                 <path d="M15.5,12c0-1.33-0.58-2.53-1.5-3.35v6.69C14.92,14.53,15.5,13.33,15.5,12z" />
-              </svg>Digital Marketing</h4>
-            <p>Use the Internet and online based digital technologies to promote products and services. </p>
+              </svg>Marketing Digital</h4>
+            <p>Use a Internet e as tecnologias digitais baseadas na reade para promover produtos e serviços. </p>
           </div>
 
           <div class="services-cards-five">
@@ -690,8 +689,8 @@
                     <circle cx="6.5" cy="6.5" r="1.5" />
                   </g>
                 </g>
-              </svg>E-commerce construction</h4>
-            <p>The best place where your product or service should to be, 24h per every single day available to big deal.</p>
+              </svg>Construção de E-commerce</h4>
+            <p>O melhor lugar onde o seu produto e/ou serviço poderia estar, 24/7 aberto para grandes negócios.</p>
           </div>
 
           <div class="services-cards-six">
@@ -702,8 +701,8 @@
                 <g>
                   <path d="M12,2L4,5v6.09c0,5.05,3.41,9.76,8,10.91c4.59-1.15,8-5.86,8-10.91V5L12,2z M18,11.09c0,4-2.55,7.7-6,8.83 c-3.45-1.13-6-4.82-6-8.83V6.31l6-2.12l6,2.12V11.09z M8.82,10.59L7.4,12l3.54,3.54l5.66-5.66l-1.41-1.41l-4.24,4.24L8.82,10.59z" />
                 </g>
-              </svg>Digital Consulting services</h4>
-            <p>Consulting designed to enable firms to better leverage their data and technology and create business value.</p>
+              </svg>Serviço de consultoria digital</h4>
+            <p>Consultoria projetada para permitir que as empresas aproveitem melhor informações e dados de tecnologia a fim de elevar seus valores comerciais.</p>
           </div>
         </div>
 
@@ -720,13 +719,13 @@
             <p><svg xmlns="http://www.w3.org/2000/svg" height="42px" viewBox="0 0 24 24" width="42px" fill="#2893a4">
                 <path d="M0 0h24v24H0V0z" fill="none" />
                 <path d="M20.57 14.86L22 13.43 20.57 12 17 15.57 8.43 7 12 3.43 10.57 2 9.14 3.43 7.71 2 5.57 4.14 4.14 2.71 2.71 4.14l1.43 1.43L2 7.71l1.43 1.43L2 10.57 3.43 12 7 8.43 15.57 17 12 20.57 13.43 22l1.43-1.43L16.29 22l2.14-2.14 1.43 1.43 1.43-1.43-1.43-1.43L22 16.29l-1.43-1.43z" />
-              </svg>HARDWORKING</p>
+              </svg>TRABALHO PESADO</p>
             <p><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="42px" viewBox="0 0 24 24" width="42px" fill="#2893a4">
                 <rect fill="none" height="24" width="24" />
                 <g>
                   <path d="M4,13c1.1,0,2-0.9,2-2c0-1.1-0.9-2-2-2s-2,0.9-2,2C2,12.1,2.9,13,4,13z M5.13,14.1C4.76,14.04,4.39,14,4,14 c-0.99,0-1.93,0.21-2.78,0.58C0.48,14.9,0,15.62,0,16.43V18l4.5,0v-1.61C4.5,15.56,4.73,14.78,5.13,14.1z M20,13c1.1,0,2-0.9,2-2 c0-1.1-0.9-2-2-2s-2,0.9-2,2C18,12.1,18.9,13,20,13z M24,16.43c0-0.81-0.48-1.53-1.22-1.85C21.93,14.21,20.99,14,20,14 c-0.39,0-0.76,0.04-1.13,0.1c0.4,0.68,0.63,1.46,0.63,2.29V18l4.5,0V16.43z M16.24,13.65c-1.17-0.52-2.61-0.9-4.24-0.9 c-1.63,0-3.07,0.39-4.24,0.9C6.68,14.13,6,15.21,6,16.39V18h12v-1.61C18,15.21,17.32,14.13,16.24,13.65z M8.07,16 c0.09-0.23,0.13-0.39,0.91-0.69c0.97-0.38,1.99-0.56,3.02-0.56s2.05,0.18,3.02,0.56c0.77,0.3,0.81,0.46,0.91,0.69H8.07z M12,8 c0.55,0,1,0.45,1,1s-0.45,1-1,1s-1-0.45-1-1S11.45,8,12,8 M12,6c-1.66,0-3,1.34-3,3c0,1.66,1.34,3,3,3s3-1.34,3-3 C15,7.34,13.66,6,12,6L12,6z" />
                 </g>
-              </svg>TEAM PLAYER</p>
+              </svg>TRABALHO EM EQUIPE</p>
             <p><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 20 20" height="42px" viewBox="0 0 20 20" width="42px" fill="#2893a4">
                 <g>
                   <rect fill="none" height="20" width="20" x="0" />
@@ -734,7 +733,7 @@
                 <g>
                   <path d="M6.12,3.94c0.58-0.58,1.54-0.58,2.12,0l3.11,3.11c0.19,0.19,0.19,0.51,0,0.71c-0.19,0.19-0.51,0.19-0.71,0L7.89,5L3.6,9.28 c-0.78,0.78-0.78,2.05,0,2.83c0.33,0.33,0.76,0.53,1.19,0.57c0.05,0.44,0.24,0.86,0.57,1.19c0.33,0.33,0.76,0.53,1.19,0.57 c0.05,0.44,0.24,0.86,0.57,1.19c0.33,0.33,0.76,0.53,1.19,0.57c0.05,0.44,0.24,0.86,0.57,1.19c0.78,0.78,2.05,0.78,2.83,0l6.39-6.4 c1.17-1.17,1.17-3.07,0-4.24l-3.89-3.89c-1.17-1.17-3.07-1.17-4.24,0L9.65,3.22L9.31,2.88c-1.17-1.17-3.07-1.17-4.24,0L1.88,6.06 C0.83,7.11,0.72,8.75,1.55,9.92l1.09-1.09c-0.26-0.56-0.16-1.24,0.3-1.7L6.12,3.94 M17.06,7.83c0.58,0.58,0.58,1.54,0,2.12 l-6.39,6.4c-0.19,0.19-0.51,0.19-0.71,0s-0.19-0.51,0-0.71l2.47-2.47l-1.06-1.06l-2.47,2.47c-0.19,0.19-0.51,0.19-0.71,0 s-0.19-0.51,0-0.71l2.47-2.47l-1.06-1.06l-2.47,2.47c-0.19,0.19-0.51,0.19-0.71,0c-0.19-0.19-0.19-0.51,0-0.71l2.47-2.47L7.85,8.58 l-2.47,2.47c-0.19,0.19-0.51,0.19-0.71,0c-0.19-0.19-0.19-0.51,0-0.71l3.23-3.23l1.7,1.7c0.78,0.78,2.05,0.78,2.83,0 s0.78-2.05,0-2.83l-1.7-1.7l0.34-0.34c0.58-0.58,1.54-0.58,2.12,0L17.06,7.83" />
                 </g>
-              </svg>RELIABLE</p>
+              </svg>CONFIÁVEL</p>
             <p><svg xmlns="http://www.w3.org/2000/svg" height="42px" viewBox="0 0 24 24" width="42px" fill="#2893a4">
                 <path d="M0 0h24v24H0V0z" fill="none" />
                 <path d="M12.87 15.07l-2.54-2.51.03-.03c1.74-1.94 2.98-4.17 3.71-6.53H17V4h-7V2H8v2H1v1.99h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11.76-2.04zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2l-4.5-12zm-2.62 7l1.62-4.33L19.12 17h-3.24z" />
@@ -748,11 +747,11 @@
 
       <section class="container-portfolio">
         <div class="portfolio">
-          <h3 id="portfolio">PORTFOLIO</h3>
+          <h3 id="portfolio">PORTIFÓLIO</h3>
         </div>
 
         <div>
-          <h2 class="sub-portfolio">My portfolio speaks better than words!</h2>
+          <h2 class="sub-portfolio">Meus projetos falam mais do que palavras!</h2>
         </div>
         <div class="portfolio-cards">
           <ul>
@@ -772,15 +771,15 @@
 
       <section class="container-idea">
         <div>
-          <h3>Star a project with me</h3>
+          <h3>Comece seu novo projeto comigo</h3>
         </div>
 
         <div>
-          <h2>Have an idea? Let's discuss it!</h2>
+          <h2>Tem alguma ideia? Vamos falar sobre ela!</h2>
         </div>
 
         <div class="botao-idea">
-          <a href="#contact">Contact me now</a>
+          <a href="#contact">Contate-me agora</a>
         </div>
       </section>
 
@@ -789,43 +788,43 @@
       <section class="container-work">
 
         <div class="work">
-          <h3 id="work">HOW IT WORKS</h3>
+          <h3 id="work">COMO FUNCIONA</h3>
         </div>
 
         <div>
-          <h2 class="sub-work">Working together everything is simpler!</h2>
+          <h2 class="sub-work">Quando se trabalha juntos, tudo se torna mais simples!</h2>
         </div>
 
         <div class="work-cards">
           <div>
             <p class="number">1.</p>
-            <p class="topic">Discusion</p>
-            <p class="explanation">Checks the viability of any idea to become reality. What is possible or not.</p>
+            <p class="topic">Troca de ideias</p>
+            <p class="explanation">Checa-se a viabilidade de todas as ideias se tornarem realidade. O que é ou não é possivel de ser feito.</p>
           </div>
           <div>
             <p class="number">2.</p>
-            <p class="topic">Conception</p>
-            <p class="explanation">Time to take all good ideas and then to draw a digital sketch trought Wire Frame.</p>
+            <p class="topic">Conceito</p>
+            <p class="explanation">Momento para reunir todas as boas ideias e produzir digitalmente um rascunho com Wire Frame.</p>
           </div>
           <div>
             <p class="number">3.</p>
-            <p class="topic">Final strategy</p>
-            <p class="explanation">It is the finals adjustments before start the code. Now, every detail matter.</p>
+            <p class="topic">Estratégia final</p>
+            <p class="explanation">Agora são os ajustes finais, antes de colocar o codigo em prática. Atenção, todo detalhe importa.</p>
           </div>
           <div>
             <p class="number">4.</p>
-            <p class="topic">Implementation</p>
-            <p class="explanation">This moment is code, code and more code. Your digital project is borning.</p>
+            <p class="topic">Implementação</p>
+            <p class="explanation">Código, código e mais código. Seu projeto digital está nascendo.</p>
           </div>
           <div>
             <p class="number">5.</p>
-            <p class="topic">Testing & evaluation</p>
-            <p class="explanation">Almost done, latest tests and evaluations, after approvement, the project is on air.</p>
+            <p class="topic">Testes & avaliações</p>
+            <p class="explanation">Estamos quase lá, últimos teste e validações, depois de aprovado, estaremos na rede.</p>
           </div>
           <div>
             <p class="number">6.</p>
-            <p class="topic">Support & Updates</p>
-            <p class="explanation">According to the customer's need, there is a periodic maintenance plans. On demand.</p>
+            <p class="topic">Suporte & Atualizações</p>
+            <p class="explanation">De acordo com a necessidade do cliente, há os planos de manutenção periódica. Todos sob demanda.</p>
           </div>
         </div>
       </section>
@@ -852,7 +851,7 @@
             <p><svg xmlns="http://www.w3.org/2000/svg" height="42px" viewBox="0 0 24 24" width="42px" fill="#dd53b8">
                 <path d="M0 0h24v24H0z" fill="none" />
                 <path d="M12 11c1.33 0 4 .67 4 2v.16c-.97 1.12-2.4 1.84-4 1.84s-3.03-.72-4-1.84V13c0-1.33 2.67-2 4-2zm0-1c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm6 .2C18 6.57 15.35 4 12 4s-6 2.57-6 6.2c0 2.34 1.95 5.44 6 9.14 4.05-3.7 6-6.8 6-9.14zM12 2c4.2 0 8 3.22 8 8.2 0 3.32-2.67 7.25-8 11.8-5.33-4.55-8-8.48-8-11.8C4 5.22 7.8 2 12 2z" />
-              </svg>Rio de Janeiro/RJ - Brazil</p>
+              </svg>Rio de Janeiro/RJ - Brasil</p>
             <p><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 0 24 24" width="36px" fill="#dd53b8">
                 <path d="M0 0h24v24H0V0z" fill="none" />
                 <path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6zm-2 0l-8 5-8-5h16zm0 12H4V8l8 5 8-5v10z" />
