Glassmorphism work-card Hover Effects

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 <path d="M12,4c4.41,0,8,3.59,8,8s-3.59,8-8,8c-1.18,0-2.34-0.26-3.43-0.78c-0.27-0.13-0.56-0.19-0.86-0.19 c-0.19,0-0.38,0.03-0.56,0.08l-3.2,0.94l0.94-3.2c0.14-0.47,0.1-0.98-0.11-1.42C4.26,14.34,4,13.18,4,12C4,7.59,7.59,4,12,4 M12,2 C6.48,2,2,6.48,2,12c0,1.54,0.36,2.98,0.97,4.29L1,23l6.71-1.97C9.02,21.64,10.46,22,12,22c5.52,0,10-4.48,10-10 C22,6.48,17.52,2,12,2L12,2z" />
               </g>
               <polygon fill="none" fill-rule="none" points="13,8 11,8 11,11 8,11 8,13 11,13 11,16 13,16 13,13 16,13 16,11 13,11" />
-            </svg> Let's talk</a>
+            </svg>
+            <p>Let's talk</p>
+          </a>
         </div>
 
       </div>
@@ -390,37 +392,50 @@
           <h2 class="sub-work">Working together everything is simpler!</h2>
         </div>
 
-        <div class="work-cards">
-          <div>
-            <p class="number">1.</p>
-            <p class="topic">Discusion</p>
-            <p class="explanation">Checks the viability of any idea to become reality. What is possible or not.</p>
+        <div class="container-work-cards">
+          <div class="work-cards">
+            <div class="work-content">
+              <p class="number">01.</p>
+              <p class="topic">Discusion</p>
+              <p class="explanation">Checks the viability of any idea to become reality. What is possible or not.</p>
+            </div>
           </div>
-          <div>
-            <p class="number">2.</p>
-            <p class="topic">Conception</p>
-            <p class="explanation">Time to take all good ideas and then to draw a digital sketch trought Wire Frame.</p>
+          <div class="work-cards">
+            <div class="work-content">
+              <p class="number">02.</p>
+              <p class="topic">Conception</p>
+              <p class="explanation">Time to take all good ideas and then to draw a digital sketch trought Wire Frame.</p>
+            </div>
           </div>
-          <div>
-            <p class="number">3.</p>
-            <p class="topic">Final strategy</p>
-            <p class="explanation">It is the finals adjustments before start the code. Now, every detail matter.</p>
+          <div class="work-cards">
+            <div class="work-content">
+              <p class="number">03.</p>
+              <p class="topic">Final strategy</p>
+              <p class="explanation">It is the finals adjustments before start the code. Now, every detail matter.</p>
+            </div>
           </div>
-          <div>
-            <p class="number">4.</p>
-            <p class="topic">Implementation</p>
-            <p class="explanation">This moment is code, code and more code. Your digital project is borning.</p>
+          <div class="work-cards">
+            <div class="work-content">
+              <p class="number">04.</p>
+              <p class="topic">Implementation</p>
+              <p class="explanation">This moment is code, code and more code. Your digital project is borning.</p>
+            </div>
           </div>
-          <div>
-            <p class="number">5.</p>
-            <p class="topic">Testing & evaluation</p>
-            <p class="explanation">Almost done, latest tests and evaluations, after approvement, the project is on air.</p>
+          <div class="work-cards">
+            <div class="work-content">
+              <p class="number">05.</p>
+              <p class="topic">Testing & evaluation</p>
+              <p class="explanation">Almost done, latest tests and evaluations, after approvement, the project is on air.</p>
+            </div>
           </div>
-          <div>
-            <p class="number">6.</p>
-            <p class="topic">Support & Updates</p>
-            <p class="explanation">According to the customer's need, there is a periodic maintenance plans. On demand.</p>
+          <div class="work-cards">
+            <div class="work-content">
+              <p class="number">06.</p>
+              <p class="topic">Support & Updates</p>
+              <p class="explanation">According to the customer's need, there is a periodic maintenance plans. On demand.</p>
+            </div>
           </div>
+        </div>
         </div>
       </section>
 
@@ -929,5 +944,14 @@
 
 </body>
 <script src="./scripts.js"></script>
+<script type="text/javascript" src="vanilla-tilt.js"></script>
+<script>
+  VanillaTilt.init(document.querySelectorAll(".work-cards"), {
+    max: 25,
+    speed: 400,
+    glare: true,
+    "max-glare": .8
+  });
+</script>
 
 </html>
