--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
 </head>
 
 <body>
-  <section class="en_lang .active">
-    <!----- MENU ----->
 
+  <!----- LANGUAGES ----->
+  <section class="lang-switch">
+    <span class="en">English</span>
+    <input type="checkbox" class="check" onclick="toggleClass()">
+    <span class="br">Portugues</span>
+  </section>
+
+
+  <!-- ENGLISH LANGUAGE -->
+
+  <section class="en_lang active">
+
+    <!----- MENU ----->
     <header class="header-bg">
 
       <div class="header">
@@ -67,14 +78,6 @@
 
       </div>
     </header>
-
-    <!----- LANGUAGES ----->
-
-    <section class="lang-switch">
-      <span class="en">English</span>
-      <input type="checkbox" class="check" onclick="toggleClass()">
-      <span class="br">Portugues</span>
-    </section>
 
     <!----- INTRODUCTION ----->
 
@@ -501,13 +504,10 @@
     </footer>
   </section>
 
-
-
   <!-- TRADUÇÃO PARA O PORTUGUÊS -->
 
-
-
   <section class="br_lang">
+
     <!----- MENU ----->
     <header class="header-bg">
 
@@ -559,13 +559,6 @@
 
       </div>
     </header>
-    <!----- LANGUAGES ----->
-
-    <section class="lang-switch">
-      <span class="en">English</span>
-      <input type="checkbox" class="check" onclick="toggleClass()">
-      <span class="br">Portugues</span>
-    </section>
 
     <!----- INTRODUCTION ----->
 
@@ -579,10 +572,10 @@
         <div class="about-info">
           <div class="about-txt">
             <h2>Olá, eu sou o Gustavo</h2>
-            <h1>Profissional em<br>UI/UX Design<br> & Desenvolvimento Web</h1>
+            <h1>Profissional em<br>UI/UX Design &<br>Desenvolvimento Web</h1>
           </div>
           <div class="about-info-hire">
-            <a href=""><img class="seta-botao" src="./img/seta-botao.svg" alt="seta">Clique para me contratar</a>
+            <a href=""><img class="seta-botao" src="./img/seta-botao.svg" alt="seta">Trabalhe comigo</a>
           </div>
           <span class="separador"></span>
           <div>
