--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
       </div>
     </header>
 
-    <!----- INTRODUCTION ----->
+    <!----- INTRODUÇÃO ----->
 
     <main>
       <section class="about-bg">
@@ -596,7 +596,7 @@
         </div>
       </section>
 
-      <!-- WHO I AM -->
+      <!-- QUEM EU SOU -->
 
       <section class="container-we-are">
         <div class="quem">
@@ -647,7 +647,7 @@
         </div>
       </section>
 
-      <!----- REASON ----->
+      <!----- RAZÕES ----->
 
       <section class="container-reason">
 
@@ -676,7 +676,7 @@
         </div>
       </section>
 
-      <!----- SERVICES ----->
+      <!----- SERVIÇOS ----->
 
       <section class="container-services">
 
@@ -691,32 +691,54 @@
         <div class="services-cards">
 
           <div class="services-cards-one">
-
-            <h4><svg xmlns="http://www.w3.org/2000/svg" height="80px" viewBox="-13 -13 50 50" width="80px" fill="#ffffff">
+            <div class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" height="80px" viewBox="-13 -13 50 50" width="80px" fill="#ffffff">
                 <path d="M0 0h24v24H0V0z" fill="#2893a4" />
                 <path d="M23 11.01L18 11c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1h5c.55 0 1-.45 1-1v-9c0-.55-.45-.99-1-.99zM23 20h-5v-7h5v7zM20 2H2C.89 2 0 2.89 0 4v12c0 1.1.89 2 2 2h7v2H7v2h8v-2h-2v-2h2v-2H2V4h18v5h2V4c0-1.11-.9-2-2-2zm-8.03 7L11 6l-.97 3H7l2.47 1.76-.94 2.91 2.47-1.8 2.47 1.8-.94-2.91L15 9h-3.03z" />
-              </svg>Desenvolvimento Web e aplicativos mobile</h4>
-            <p>Marca online em todos os lugares, a todo tempo, seus clientes em todos os dispositivos. </p>
+              </svg>
+            </div>
+
+            <div class="cards-content">
+              <h4>Desenvolvimento Web e apps mobile</h4>
+              <p>Sua marca online em qualquer lugar, o todo tempo e em qualquer dispositivo.</p>
+            </div>
           </div>
 
           <div class="services-cards-two">
-            <h4><svg xmlns="http://www.w3.org/2000/svg" enable-background="new -13 -13 50 50" height="80px" viewBox="-11 -11 46 46" width="80px" fill="#ffffff">
+
+            <div class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" enable-background="new -13 -13 50 50" height="80px" viewBox="-11 -11 46 46" width="80px" fill="#ffffff">
                 <rect fill="#2893a4" height="24" width="24" />
                 <path d="M18.85,10.39l1.06-1.06c0.78-0.78,0.78-2.05,0-2.83L18.5,5.09c-0.78-0.78-2.05-0.78-2.83,0l-1.06,1.06L18.85,10.39z M14.61,11.81L7.41,19H6v-1.41l7.19-7.19L14.61,11.81z M13.19,7.56L4,16.76V21h4.24l9.19-9.19L13.19,7.56L13.19,7.56z M19,17.5 c0,2.19-2.54,3.5-5,3.5c-0.55,0-1-0.45-1-1s0.45-1,1-1c1.54,0,3-0.73,3-1.5c0-0.47-0.48-0.87-1.23-1.2l1.48-1.48 C18.32,15.45,19,16.29,19,17.5z M4.58,13.35C3.61,12.79,3,12.06,3,11c0-1.8,1.89-2.63,3.56-3.36C7.59,7.18,9,6.56,9,6 c0-0.41-0.78-1-2-1C5.74,5,5.2,5.61,5.17,5.64C4.82,6.05,4.19,6.1,3.77,5.76C3.36,5.42,3.28,4.81,3.62,4.38C3.73,4.24,4.76,3,7,3 c2.24,0,4,1.32,4,3c0,1.87-1.93,2.72-3.64,3.47C6.42,9.88,5,10.5,5,11c0,0.31,0.43,0.6,1.07,0.86L4.58,13.35z" />
-              </svg>Ui/Ux Design</h4>
-            <p>Desde o design inicial até o estágio final do desnvolvimento, compleetamente tudo voltado para você, cliente.</p>
+              </svg>
+            </div>
+
+            <div class="cards-content">
+              <h4>Ui/Ux Design</h4>
+              <p>Desde o design inicial até o estágio final do desnvolvimento, tudo voltado para você, cliente.</p>
+            </div>
+
           </div>
 
           <div class="services-cards-three">
-            <h4><svg xmlns="http://www.w3.org/2000/svg" height="80px" viewBox="-13 -13 50 50" width="80px" fill="#ffffff">
+
+            <div class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" height="80px" viewBox="-13 -13 50 50" width="80px" fill="#ffffff">
                 <path d="M0 0h24v24H0V0z" fill="#2893a4" opacity=".87" />
                 <path d="M21 8h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2zm0 4l-3 7H9V9l4.34-4.34L12.23 10H21v2zM1 9h4v12H1z" />
-              </svg>Gerenciamento de contas em mídias sociais</h4>
-            <p>Estratégia alavancada de crescimento em rede social, desenvolvido para aumentar negócios e oportunidade oriundadas da web.</p>
+              </svg>
+            </div>
+
+            <div class="cards-content">
+              <h4>Gerenciamento de contas em mídias sociais</h4>
+              <p>Estratégia alavancada de crescimento em rede social, desenvolvido para aumentar negócios e oportunidade oriundadas da web.</p>
+            </div>
           </div>
 
           <div class="services-cards-four">
-            <h4><svg xmlns="http://www.w3.org/2000/svg" enable-background="new -8 -8 40 40" height="80px" viewBox="-8 -8 40 40" width="80px" fill="#ffffff">
+
+            <div class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" enable-background="new -8 -8 40 40" height="80px" viewBox="-8 -8 40 40" width="80px" fill="#ffffff">
                 <g>
                   <rect fill="#2893a4" height="24" width="24" />
                 </g>
@@ -725,12 +747,19 @@
                 <path d="M20.4,5.6C20,5.07,19.6,4.53,19.2,4c-0.99,0.74-2.24,1.68-3.2,2.4c0.4,0.53,0.8,1.07,1.2,1.6 C18.16,7.28,19.41,6.35,20.4,5.6z" />
                 <path d="M4,9c-1.1,0-2,0.9-2,2v2c0,1.1,0.9,2,2,2h1v4h2v-4h1l5,3V6L8,9H4z M9.03,10.71L11,9.53v4.94l-1.97-1.18L8.55,13H8H4v-2h4 h0.55L9.03,10.71z" />
                 <path d="M15.5,12c0-1.33-0.58-2.53-1.5-3.35v6.69C14.92,14.53,15.5,13.33,15.5,12z" />
-              </svg>Marketing Digital</h4>
-            <p>Use a Internet e as tecnologias digitais baseadas na reade para promover produtos e serviços. </p>
+              </svg>
+            </div>
+
+            <div class="cards-content">
+              <h4>Marketing Digital</h4>
+              <p>Use a Internet e as tecnologias digitais baseadas na reade para promover produtos e serviços.</p>
+            </div>
           </div>
 
           <div class="services-cards-five">
-            <h4><svg xmlns="http://www.w3.org/2000/svg" enable-background="new -13 -13 50 50" height="80px" viewBox="-13 -13 50 50" width="80px" fill="#ffffff">
+
+            <div class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" enable-background="new -13 -13 50 50" height="80px" viewBox="-13 -13 50 50" width="80px" fill="#ffffff">
                 <g>
                   <path d="M0,0h24v24H0V0z" fill="#2893a4" />
                 </g>
@@ -740,26 +769,36 @@
                     <circle cx="6.5" cy="6.5" r="1.5" />
                   </g>
                 </g>
-              </svg>Construção de E-commerce</h4>
-            <p>O melhor lugar onde o seu produto e/ou serviço poderia estar, 24/7 aberto para grandes negócios.</p>
+              </svg>
+            </div>
+            <div class="cards-content">
+              <h4>Construção de E-commerce</h4>
+              <p>O melhor lugar onde o seu produto e/ou serviço poderia estar, 24/7 aberto para grandes negócios.</p>
+            </div>
           </div>
 
           <div class="services-cards-six">
-            <h4><svg xmlns="http://www.w3.org/2000/svg" enable-background="new -11 -11 46 46" height="80px" viewBox="-11 -11 46 46" width="80px" fill="#ffffff">
+
+            <div class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" enable-background="new -11 -11 46 46" height="80px" viewBox="-11 -11 46 46" width="80px" fill="#ffffff">
                 <g>
                   <path d="M0,0h24v24H0V0z" fill="#2893a4" />
                 </g>
                 <g>
                   <path d="M12,2L4,5v6.09c0,5.05,3.41,9.76,8,10.91c4.59-1.15,8-5.86,8-10.91V5L12,2z M18,11.09c0,4-2.55,7.7-6,8.83 c-3.45-1.13-6-4.82-6-8.83V6.31l6-2.12l6,2.12V11.09z M8.82,10.59L7.4,12l3.54,3.54l5.66-5.66l-1.41-1.41l-4.24,4.24L8.82,10.59z" />
                 </g>
-              </svg>Serviço de consultoria digital</h4>
-            <p>Consultoria projetada para permitir que as empresas aproveitem melhor informações e dados de tecnologia a fim de elevar seus valores comerciais.</p>
+              </svg>
+            </div>
+            <div class="cards-content">
+              <h4>Serviço de consultoria digital</h4>
+              <p>Consultoria projetada para permitir que as empresas aproveitem melhor informações e dados de tecnologia a fim de elevar seus valores comerciais.</p>
+            </div>
           </div>
         </div>
 
       </section>
 
-      <!----- SKILLS ----->
+      <!----- HABILIDADES ----->
 
       <section class="container-skills">
 
@@ -794,7 +833,7 @@
         </div>
       </section>
 
-      <!----- PORTFOLIO ----->
+      <!----- PORTIFOLIO ----->
 
       <section class="container-portfolio">
         <div class="portfolio">
@@ -818,7 +857,7 @@
         </div>
       </section>
 
-      <!----- IDEA ----->
+      <!----- IDEIAS ----->
 
       <section class="container-idea">
         <div>
@@ -834,7 +873,7 @@
         </div>
       </section>
 
-      <!----- WORK ----->
+      <!----- COMO FUNCIONA ----->
 
       <section class="container-work">
 
@@ -880,7 +919,7 @@
         </div>
       </section>
 
-      <!----- CONTACT ----->
+      <!----- CONTATO ----->
 
       <section class="container-contact">
 
