fixed the cards

--- a/index.html
+++ b/index.html
@@ -656,19 +656,19 @@
             <p><svg xmlns="http://www.w3.org/2000/svg" height="42px" viewBox="0 0 24 24" width="42px" fill="#dd53b8">
                 <path d="M0 0h24v24H0V0z" fill="none" />
                 <path d="M18.6 6.62c-1.44 0-2.8.56-3.77 1.53L7.8 14.39c-.64.64-1.49.99-2.4.99-1.87 0-3.39-1.51-3.39-3.38S3.53 8.62 5.4 8.62c.91 0 1.76.35 2.44 1.03l1.13 1 1.51-1.34L9.22 8.2C8.2 7.18 6.84 6.62 5.4 6.62 2.42 6.62 0 9.04 0 12s2.42 5.38 5.4 5.38c1.44 0 2.8-.56 3.77-1.53l7.03-6.24c.64-.64 1.49-.99 2.4-.99 1.87 0 3.39 1.51 3.39 3.38s-1.52 3.38-3.39 3.38c-.9 0-1.76-.35-2.44-1.03l-1.14-1.01-1.51 1.34 1.27 1.12c1.02 1.01 2.37 1.57 3.82 1.57 2.98 0 5.4-2.41 5.4-5.38s-2.42-5.37-5.4-5.37z" />
-              </svg>O primeiro site criado no mundo para web permanece online e funcionando perfeitamente, desde 1990</p>
+              </svg>O primeiro website criado no mundo permanece online e funcionando perfeitamente, desde 1990.</p>
             <p><svg xmlns="http://www.w3.org/2000/svg" height="42px" viewBox="0 0 24 24" width="42px" fill="#dd53b8">
                 <path d="M0 0h24v24H0V0z" fill="none" />
                 <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z" />
-              </svg>Mais de 50% da população mundial está conectada a internet, fazendo com que algumas marcar tenho alcance global</p>
+              </svg>Mais de 50% da população mundial está conectada a internet, tornando marcas mundialmente conhecidas.</p>
             <p><svg xmlns="http://www.w3.org/2000/svg" height="42px" viewBox="0 0 24 24" width="42px" fill="#dd53b8">
                 <path d="M0 0h24v24H0V0z" fill="none" />
                 <path d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z" />
-              </svg>Executivos da área de marketing estão se utilizando de 75% do total de seus orçamentos no meios digitais ante os canais traficionais de propaganda</p>
+              </svg>Executivos da área de marketing estão direcionando 75% do total de seus orçamentos no meios digitais ante os canais tradicionais de propaganda.</p>
             <p><svg xmlns="http://www.w3.org/2000/svg" height="42px" viewBox="0 0 24 24" width="42px" fill="#dd53b8">
                 <path d="M0 0h24v24H0V0z" fill="none" />
                 <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92c0-1.61-1.31-2.92-2.92-2.92zM18 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM6 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm12 7.02c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z" />
-              </svg>Mais de 20% dos compradores de lojas online compartilham suas boas experiências com comércio eletrônico durante suas compras com pelo menos 10 pessoas.</p>
+              </svg>Mais de 20% das pessoas que compram online compartilham suas boas experiências no comércio eletrônico com pelo menos 10 pessoas.</p>
           </div>
 
           <img src="./img/coding-fig.jpeg" alt="home office">
@@ -699,7 +699,7 @@
             </div>
 
             <div class="cards-content">
-              <h4>Desenvolvimento Web e apps mobile</h4>
+              <h4>Aplicações Web e mobile</h4>
               <p>Sua marca online em qualquer lugar, o todo tempo e em qualquer dispositivo.</p>
             </div>
           </div>
@@ -715,7 +715,7 @@
 
             <div class="cards-content">
               <h4>Ui/Ux Design</h4>
-              <p>Desde o design inicial até o estágio final do desnvolvimento, tudo voltado para você, cliente.</p>
+              <p>Desde o design inicial até o estágio final do projeto, tudo voltado para você.</p>
             </div>
 
           </div>
@@ -730,8 +730,8 @@
             </div>
 
             <div class="cards-content">
-              <h4>Gerenciamento de contas em mídias sociais</h4>
-              <p>Estratégia alavancada de crescimento em rede social, desenvolvido para aumentar negócios e oportunidade oriundadas da web.</p>
+              <h4>Gerenciamento de mídias</h4>
+              <p>Alavancagem em redes sociais, para aumentar negócios e oportunidades.</p>
             </div>
           </div>
 
@@ -791,7 +791,7 @@
             </div>
             <div class="cards-content">
               <h4>Serviço de consultoria digital</h4>
-              <p>Consultoria projetada para permitir que as empresas aproveitem melhor informações e dados de tecnologia a fim de elevar seus valores comerciais.</p>
+              <p>Permite empresas aproveitem melhor informações e dados de tecnologia para elevar seus valores comerciais.</p>
             </div>
           </div>
         </div>
