changed portfolio links

--- a/index.html
+++ b/index.html
@@ -359,14 +359,10 @@
         </div>
         <div class="portfolio-cards">
           <ul>
-            <li><a href="http://caravanviagem.netlify.app/" target="_blank"><img src="./img/parceiros/caravan.svg" alt="caravan"></a></li>
-            <li><a href="http://ranek.origamid.dev/" target="_blank"><img src="./img/parceiros/ranek.svg" alt="ranek"></a></li>
-            <li><a href="https://handel.origamid.dev/" target="_blank"><img src="./img/parceiros/handel.svg" alt="handel"></a></li>
-            <li><a href="https://dogs.origamid.dev/" target="_blank"><img src="./img/parceiros/dogs.svg" alt="dogs"></a></li>
-            <li><a href="https://www.origamid.com/projetos/lescone/" target="_blank"><img src="./img/parceiros/lescone.svg" alt="lescone"></a></li>
-            <li><a href="https://www.origamid.com/projetos/flexblog/" target="_blank"><img src="./img/parceiros/flexblog.svg" alt="flexblog"></a></li>
-            <li><a href="https://www.origamid.com/projetos/wildbeast/" target="_blank"><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></a></li>
-            <li><a href="https://www.figma.com/proto/FJwTlfjxc6VWUXiNw0tjCGcM/surfbot?scaling=min-zoom&node-id=1%3A2" target="_blank"><img src="./img/parceiros/surfbot.svg" alt="surfbot"></a></li>
+            <li><a href="https://cgrfaria.github.io/bikcraft/" target="_blank"><img src="./img/parceiros/bikcraft.svg" alt="bikcraft logo"></a></li>
+            <li><a href="https://cgrfaria.github.io/doctorCare/" target="_blank"><img src="./img/parceiros/DoctorCare.svg" alt="DoctorCare logo"></a></li>
+            <li><a href="https://payment-system-seven.vercel.app/" target="_blank"><img src="./img/parceiros/rocketpay.svg" alt="rocket pay logo"></a></li>
+            <li><a href="https://world-cup-calendar.vercel.app/" target="_blank"><img src="./img/parceiros/fifa.svg" alt="Fifa World Cup Calendar logo"></a></li>
           </ul>
         </div>
       </section>
